...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp">
        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/item_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
