<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/str_filter"
            android:id="@+id/menu_action_filter"
            android:icon="@drawable/ic_filter_list"
            app:showAsAction="always"/>
</menu>
